--- a/src/components/Peliculas/Peliculas.css
+++ b/src/components/Peliculas/Peliculas.css
@@ -4,6 +4,7 @@
   padding-bottom: 10px;
   border-radius: 10px;
   overflow: hidden;
+  position: relative;
 }
 #peliculas .pelicula .poster {
   width: 100%;
@@ -19,6 +20,21 @@
 #peliculas .pelicula .titulo {
   height: 60px;
 }
+#peliculas .pelicula .acciones {
+  position: absolute;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+#peliculas .pelicula .acciones li {
+  float: left;
+}
+#peliculas .pelicula .acciones li button {
+  color: #fff;
+  font-size: 25px;
+}
+#peliculas .pelicula .acciones li button.eliminar {
+  color: red;
+}
 .calificacion .fas {
   color: #f8df00;
 }
@@ -30,6 +46,10 @@
   display: grid;
   grid-template-columns: 1fr;
   row-gap: 30px;
+}
+#boton-crear-pelicula {
+  color: #fff;
+  font-size: 40px;
 }
 
 /***** MEDIA QUERYS *****/
