Cambio de colores, tipografía e íconos

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,6 +1,6 @@
 /* CABECERA */
 #cabecera {
-  background-color: #021617;
+  background-color: #B8DBD9;
   padding: 20px 0;
 }
 #boton-menu-principal {
