--- a/src/components/Sidenav/Sidenav.css
+++ b/src/components/Sidenav/Sidenav.css
@@ -1,7 +1,7 @@
 /* Side menu */
 #menu-principal-sidenav {
   position: absolute;
-  background-color: #001011;
+  background-color: #586f7c;
   width: 300px;
   height: 100%;
   box-shadow: 2px 0px 5px rgba(0, 0, 0, 0.3);
@@ -30,7 +30,7 @@
 }
 
 #menu-principal-sidenav ul li a .fas {
-  color: #64e9ee;
+  color: #000;
   width: 35px;
   text-align: center;
 }
