--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
-/* @import url("https://fonts.googleapis.com/css2?family=Bangers&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap"); */
+@import url("https://fonts.googleapis.com/css2?family=Lora&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap"); */
 
 body {
   margin: 0;
@@ -18,9 +18,9 @@ code {
 /* COMUNES */
 body {
   margin: 0;
-  background-color: #001011;
+  background-color: #f4f4f9;
   font-size: 16px;
-  font-family: "Roboto", sans-serif;
+  font-family: "Quicksand", sans-serif;
   font-weight: 400;
 }
 
@@ -33,11 +33,11 @@ ul li {
 }
 
 .logo {
-  color: #64e9ee;
+  color: #2F4550;
   text-decoration: none;
   text-transform: uppercase;
   font-size: 45px;
-  font-family: "Bangers", cursive;
+  font-family: "Lora", cursive;
   font-weight: 400;
   letter-spacing: 4px;
 }
