--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,8 +4,8 @@
   padding: 20px 0;
 }
 #boton-menu-principal {
-  color: #fff;
-  font-size: 30px;
+  color: #f4f4f7;
+  font-size: 40px;
   margin-right: 15px;
 }
 
@@ -14,11 +14,11 @@
   margin-top: 15px;
 }
 #botones-cabecera li .boton-login {
-  color: #fff;
+  color: #f4f4f7;
   font-size: 20px;
 }
 #botones-cabecera li .boton-logout {
-  color: #fff;
+  color: #f4f4f7;
   font-size: 20px;
   background: none;
   border: none;
