--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@ code {
 }
 
 /* COMUNES */
-body {
+body  {
   margin: 0;
   background-color: #f4f4f9;
   font-size: 16px;
@@ -32,7 +32,14 @@ ul li {
   list-style: none;
 }
 
-.logo {
+.titulo  {
+  margin: 0;
+  font-size: 40px;
+  font-family: "Quicksand", sans-serif;
+  font-weight: 400;
+}
+
+.logo  {
   color: #2F4550;
   text-decoration: none;
   text-transform: uppercase;
@@ -48,8 +55,8 @@ ul li {
   cursor: pointer;
 }
 
-h1 {
-  color: #64e9ee;
+h1  {
+  color: #2F4550;
   font-family: "Bangers", cursive;
   font-size: 36px;
   font-weight: bold;
