--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@ code {
 body  {
   margin: 0;
   background-color: #f4f4f9;
-  font-size: 16px;
+  font-size: 19px;
   font-family: "Quicksand", sans-serif;
   font-weight: 400;
 }
@@ -36,7 +36,7 @@ ul li {
   margin: 0;
   font-size: 40px;
   font-family: "Quicksand", sans-serif;
-  font-weight: 400;
+  font-weight: bold;
 }
 
 .logo  {
