--- a/src/index.css
+++ b/src/index.css
@@ -57,9 +57,9 @@ ul li {
 
 h1  {
   color: #2F4550;
-  font-family: "Bangers", cursive;
-  font-size: 36px;
-  font-weight: bold;
+  font-family: "Quicksand", cursive;
+  font-size: 40px;
+  font-weight: bolder;
   letter-spacing: 2px;
 }
 h1 .fas {
