--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,6 +5,7 @@
 }
 #boton-menu-principal {
   color: #f4f4f7;
+  float: left;
   font-size: 40px;
   margin-right: 15px;
 }
@@ -19,7 +20,7 @@
 }
 #botones-cabecera li .boton-logout {
   color: #f4f4f7;
-  font-size: 20px;
+  font-size: 35px;
   background: none;
   border: none;
 }
